--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 
-    <link rel="icon" href="/images/icons/favicon.ico">
+    <link rel="icon" href="/images/icons/favicon.ico?v=2">
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#9EC1A3">
 
