--- a/src/my-app.html
+++ b/src/my-app.html
@@ -1,13 +1,3 @@
-<!--
-@license
-Copyright (c) 2016 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/app-layout/app-drawer/app-drawer.html">
 <link rel="import" href="../bower_components/app-layout/app-drawer-layout/app-drawer-layout.html">
@@ -43,7 +33,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --app-drawer-width: 200px;
         --app-drawer-content-container: {
           background-color: #9EC1A3;
-          box-shadow: 1px 0 1px 0px rgba(255,255,255,0.3);
+          box-shadow: 1px 0 1px 0 rgba(255,255,255,0.3);
         }
       }
 
@@ -91,6 +81,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             role="main">
           <my-page-start name="start"></my-page-start>
           <my-page-schiffbruch name="schiffbruch"></my-page-schiffbruch>
+          <my-page-cannonhill name="cannonhill"></my-page-cannonhill>
           <my-page-impressum name="impressum"></my-page-impressum>
           <my-page-404 name="404"></my-page-404>
         </iron-pages>
@@ -99,6 +90,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="start" href="/" drawer-toggle>Start</a>
           <a name="schiffbruch" href="/schiffbruch" drawer-toggle>Schiffbruch</a>
+          <a name="cannonhill" href="/cannonhill" drawer-toggle>Cannonhill</a>
           <a name="impressum" href="/impressum" drawer-toggle>Impressum</a>
         </iron-selector>
       </app-drawer>
