--- a/src/my-app.html
+++ b/src/my-app.html
@@ -82,6 +82,7 @@
           <my-page-start name="start"></my-page-start>
           <my-page-schiffbruch name="schiffbruch"></my-page-schiffbruch>
           <my-page-cannonhill name="cannonhill"></my-page-cannonhill>
+          <my-page-scapemaker name="scapemaker"></my-page-scapemaker>
           <my-page-impressum name="impressum"></my-page-impressum>
           <my-page-404 name="404"></my-page-404>
         </iron-pages>
@@ -91,6 +92,7 @@
           <a name="start" href="/" drawer-toggle>Start</a>
           <a name="schiffbruch" href="/schiffbruch" drawer-toggle>Schiffbruch</a>
           <a name="cannonhill" href="/cannonhill" drawer-toggle>Cannonhill</a>
+          <a name="scapemaker" href="/scapemaker" drawer-toggle>ScapeMaker</a>
           <a name="impressum" href="/impressum" drawer-toggle>Impressum</a>
         </iron-selector>
       </app-drawer>
