--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>www.dplate.de</title>
     <meta name="description" content="Webseite von Dirk Plate">
 
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-
     <link rel="icon" href="/images/icons/favicon.ico?v=2">
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#9EC1A3">
@@ -65,6 +63,13 @@
     <link rel="import" href="/src/my-app.html">
 
     <style>
+      @font-face{
+        font-family: 'Ubuntu';
+        font-style: normal;
+        font-weight: 300;
+        src:local('Ubuntu Light'), url(/images/icons/ubuntu.woff) format('woff')
+      }
+
       body {
         margin: 0;
         font-family: 'Ubuntu', sans-serif;
@@ -74,6 +79,18 @@
         background-color: #1F363D;
       }
     </style>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-678641-3', 'auto');
+      ga('set', 'anonymizeIp', true);
+      ga('send', 'pageview');
+
+    </script>
   </head>
   <body>
     <my-app></my-app>
