Submenu and file structure

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       })();
     </script>
 
-    <link rel="import" href="/src/my-app.html">
+    <link rel="import" href="/src/app.html">
 
     <style>
       @font-face{
@@ -88,8 +88,6 @@
 
       ga('create', 'UA-678641-3', 'auto');
       ga('set', 'anonymizeIp', true);
-      ga('send', 'pageview');
-
     </script>
   </head>
   <body>
