--- a/src/pages/games/schiffbruch.html
+++ b/src/pages/games/schiffbruch.html
@@ -1,5 +1,5 @@
-<link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="styles.html">
+<link rel="import" href="../../../bower_components/polymer/polymer.html">
+<link rel="import" href="../styles.html">
 
 <dom-module id="my-page-schiffbruch">
   <template>
@@ -8,7 +8,7 @@
     <div class="card">
       <h1>Schiffbruch</h1>
       <p>
-        Schiffbruch ist mein erstes C++ und DirectX Spiel. Man
+        Schiffbruch ist das klassische Survival-Spiel. Man
         strandet auf einer einsamen Insel und muss nun sein Leben
         meistern. Man kann sich Werkzeuge basteln, angeln, auf
         Jagd gehen, Felder anlegen und Behausungen bauen. Das
