--- a/src/pages/games/cannonhill.html
+++ b/src/pages/games/cannonhill.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../../bower_components/polymer/polymer.html">
 <link rel="import" href="../styles.html">
 
-<dom-module id="my-page-cannonhill">
+<dom-module id="my-page-games-cannonhill">
   <template>
     <style include="page-styles"></style>
 
@@ -41,7 +41,7 @@
 
   <script>
     Polymer({
-      is: 'my-page-cannonhill'
+      is: 'my-page-games-cannonhill'
     });
   </script>
 </dom-module>
