--- a/src/pages/tools/scapemaker.html
+++ b/src/pages/tools/scapemaker.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../../bower_components/polymer/polymer.html">
 <link rel="import" href="../styles.html">
 
-<dom-module id="my-page-scapemaker">
+<dom-module id="my-page-tools-scapemaker">
   <template>
     <style include="page-styles"></style>
 
@@ -36,7 +36,7 @@
 
   <script>
     Polymer({
-      is: 'my-page-scapemaker'
+      is: 'my-page-tools-scapemaker'
     });
   </script>
 </dom-module>
