--- a/src/pages/games/schiffbruch.html
+++ b/src/pages/games/schiffbruch.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../../bower_components/polymer/polymer.html">
 <link rel="import" href="../styles.html">
 
-<dom-module id="my-page-schiffbruch">
+<dom-module id="my-page-games-schiffbruch">
   <template>
     <style include="page-styles"></style>
 
@@ -60,7 +60,7 @@
 
   <script>
     Polymer({
-      is: 'my-page-schiffbruch'
+      is: 'my-page-games-schiffbruch'
     });
   </script>
 </dom-module>
