--- a/src/pages.html
+++ b/src/pages.html
@@ -4,7 +4,7 @@
 <dom-module id="my-pages">
   <template>
     <iron-pages selected="[[path]]" attr-for-selected="name" fallback-selection="/404" role="main" id="pages">
-      <my-page-start name="/start"></my-page-start>
+      <my-page-start name="/"></my-page-start>
       <my-page-games-schiffbruch name="/games/schiffbruch"></my-page-games-schiffbruch>
       <my-page-games-cannonhill name="/games/cannonhill"></my-page-games-cannonhill>
       <my-page-tools-scapemaker name="/tools/scapemaker"></my-page-tools-scapemaker>
