--- a/src/pages.html
+++ b/src/pages.html
@@ -10,6 +10,33 @@
       <my-page-tools-scapemaker name="/tools/scapemaker"></my-page-tools-scapemaker>
       <my-page-impressum name="/impressum"></my-page-impressum>
       <my-page-404 name="/404"></my-page-404>
+      <my-page-alpine-flumserberg-20161112 name="/alpine/flumserberg/20161112"></my-page-alpine-flumserberg-20161112>
+      <my-page-alpine-lenzerheide-20161029 name="/alpine/lenzerheide/20161029"></my-page-alpine-lenzerheide-20161029>
+      <my-page-alpine-malbun-20161016 name="/alpine/malbun/20161016"></my-page-alpine-malbun-20161016>
+      <my-page-alpine-alpstein-20160911 name="/alpine/alpstein/20160911"></my-page-alpine-alpstein-20160911>
+      <my-page-alpine-toggenburg-20160813 name="/alpine/toggenburg/20160813"></my-page-alpine-toggenburg-20160813>
+      <my-page-alpine-murgseen-20160709 name="/alpine/murgseen/20160709"></my-page-alpine-murgseen-20160709>
+      <my-page-alpine-alpstein-20160730 name="/alpine/alpstein/20160730"></my-page-alpine-alpstein-20160730>
+      <my-page-alpine-fronalpstock-20160716 name="/alpine/fronalpstock/20160716"></my-page-alpine-fronalpstock-20160716>
+      <my-page-alpine-kaunertal-20151124 name="/alpine/kaunertal/20151124"></my-page-alpine-kaunertal-20151124>
+      <my-page-alpine-davos-20151031 name="/alpine/davos/20151031"></my-page-alpine-davos-20151031>
+      <my-page-alpine-alpstein-20151024 name="/alpine/alpstein/20151024"></my-page-alpine-alpstein-20151024>
+      <my-page-alpine-davos-20151010 name="/alpine/davos/20151010"></my-page-alpine-davos-20151010>
+      <my-page-alpine-alpstein-20150912 name="/alpine/alpstein/20150912"></my-page-alpine-alpstein-20150912>
+      <my-page-alpine-brandnertal-20150829 name="/alpine/brandnertal/20150829"></my-page-alpine-brandnertal-20150829>
+      <my-page-alpine-gargellen-20150822 name="/alpine/gargellen/20150822"></my-page-alpine-gargellen-20150822>
+      <my-page-alpine-davos-20150808 name="/alpine/davos/20150808"></my-page-alpine-davos-20150808>
+      <my-page-alpine-flumserberg-20150726 name="/alpine/flumserberg/20150726"></my-page-alpine-flumserberg-20150726>
+      <my-page-alpine-pizol-20150712 name="/alpine/pizol/20150712"></my-page-alpine-pizol-20150712>
+      <my-page-alpine-hohekugel-20150628 name="/alpine/hohekugel/20150628"></my-page-alpine-hohekugel-20150628>
+      <my-page-alpine-speer-20150606 name="/alpine/speer/20150606"></my-page-alpine-speer-20150606>
+      <my-page-alpine-disentis-20150514 name="/alpine/disentis/20150514"></my-page-alpine-disentis-20150514>
+      <my-page-alpine-lenzerheide-20150318 name="/alpine/lenzerheide/20150318"></my-page-alpine-lenzerheide-20150318>
+      <my-page-alpine-toggenburg-20150323 name="/alpine/toggenburg/20150323"></my-page-alpine-toggenburg-20150323>
+      <my-page-alpine-airolo-20150222 name="/alpine/airolo/20150222"></my-page-alpine-airolo-20150222>
+      <my-page-alpine-arlberg-20150207 name="/alpine/arlberg/20150207"></my-page-alpine-arlberg-20150207>
+      <my-page-alpine-arlberg-20150131 name="/alpine/arlberg/20150131"></my-page-alpine-arlberg-20150131>
+      <my-page-alpine-montafon-20150110 name="/alpine/montafon/20150110"></my-page-alpine-montafon-20150110>
     </iron-pages>
   </template>
 
