--- a/src/pages/styles.html
+++ b/src/pages/styles.html
@@ -20,6 +20,12 @@
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
       }
 
+      .pictureCard {
+        color: #fff;
+        background-color: black;
+        max-width: 1280px;
+      }
+
       h1 {
         font-size: 22px;
       }
@@ -38,6 +44,13 @@
         margin: 16px auto 0;
         max-width: calc(100% - 16px * 2);
       }
+
+      .pictureCard img {
+        display: inline-block;
+        margin: 0;
+        max-width: 100%;
+      }
+
     </style>
   </template>
 </dom-module>
