Import of more articles

--- a/src/pages.html
+++ b/src/pages.html
@@ -37,6 +37,37 @@
       <my-page-alpine-arlberg-20150207 name="/alpine/arlberg/20150207"></my-page-alpine-arlberg-20150207>
       <my-page-alpine-arlberg-20150131 name="/alpine/arlberg/20150131"></my-page-alpine-arlberg-20150131>
       <my-page-alpine-montafon-20150110 name="/alpine/montafon/20150110"></my-page-alpine-montafon-20150110>
+      <my-page-alpine-brandnertal-20141229 name="/alpine/brandnertal/20141229"></my-page-alpine-brandnertal-20141229>
+      <my-page-alpine-flumserberg-20141227 name="/alpine/flumserberg/20141227"></my-page-alpine-flumserberg-20141227>
+      <my-page-alpine-ischgl-20141217 name="/alpine/ischgl/20141217"></my-page-alpine-ischgl-20141217>
+      <my-page-alpine-montafon-20141215 name="/alpine/montafon/20141215"></my-page-alpine-montafon-20141215>
+      <my-page-alpine-davos-20141122 name="/alpine/davos/20141122"></my-page-alpine-davos-20141122>
+      <my-page-alpine-laax-20141209 name="/alpine/laax/20141209"></my-page-alpine-laax-20141209>
+      <my-page-alpine-sankt-moritz-20141210 name="/alpine/sankt-moritz/20141210"></my-page-alpine-sankt-moritz-20141210>
+      <my-page-alpine-hoher-freschen-20141129 name="/alpine/hoher-freschen/20141129"></my-page-alpine-hoher-freschen-20141129>
+      <my-page-alpine-alpstein-20141102 name="/alpine/alpstein/20141102"></my-page-alpine-alpstein-20141102>
+      <my-page-alpine-grasgehren-20141026 name="/alpine/grasgehren/20141026"></my-page-alpine-grasgehren-20141026>
+      <my-page-alpine-alvier-20140907 name="/alpine/alvier/20140907"></my-page-alpine-alvier-20140907>
+      <my-page-alpine-boedele-20140927 name="/alpine/boedele/20140927"></my-page-alpine-boedele-20140927>
+      <my-page-alpine-toggenburg-20140928 name="/alpine/toggenburg/20140928"></my-page-alpine-toggenburg-20140928>
+      <my-page-alpine-sulzfluh-20141012 name="/alpine/sulzfluh/20141012"></my-page-alpine-sulzfluh-20141012>
+      <my-page-alpine-alpstein-20131019 name="/alpine/alpstein/20131019"></my-page-alpine-alpstein-20131019>
+      <my-page-alpine-alpstein-20140622 name="/alpine/alpstein/20140622"></my-page-alpine-alpstein-20140622>
+      <my-page-alpine-alpstein-20140801 name="/alpine/alpstein/20140801"></my-page-alpine-alpstein-20140801>
+      <my-page-alpine-ischgl-20140504 name="/alpine/ischgl/20140504"></my-page-alpine-ischgl-20140504>
+      <my-page-alpine-toggenburg-20140329 name="/alpine/toggenburg/20140329"></my-page-alpine-toggenburg-20140329>
+      <my-page-alpine-davos-20140409 name="/alpine/davos/20140409"></my-page-alpine-davos-20140409>
+      <my-page-alpine-arlberg-20140411 name="/alpine/arlberg/20140411"></my-page-alpine-arlberg-20140411>
+      <my-page-alpine-lenzerheide-20140331 name="/alpine/lenzerheide/20140331"></my-page-alpine-lenzerheide-20140331>
+      <my-page-alpine-serfaus-fiss-ladis-20140407 name="/alpine/serfaus-fiss-ladis/20140407"></my-page-alpine-serfaus-fiss-ladis-20140407>
+      <my-page-alpine-flumserberg-20140403 name="/alpine/flumserberg/20140403"></my-page-alpine-flumserberg-20140403>
+      <my-page-alpine-montafon-20140404 name="/alpine/montafon/20140404"></my-page-alpine-montafon-20140404>
+      <my-page-alpine-arlberg-20140401 name="/alpine/arlberg/20140401"></my-page-alpine-arlberg-20140401>
+      <my-page-alpine-titlis-20140302 name="/alpine/titlis/20140302"></my-page-alpine-titlis-20140302>
+      <my-page-alpine-savognin-20140315 name="/alpine/savognin/20140315"></my-page-alpine-savognin-20140315>
+      <my-page-alpine-pizol-20140228 name="/alpine/pizol/20140228"></my-page-alpine-pizol-20140228>
+      <my-page-alpine-laax-20140222 name="/alpine/laax/20140222"></my-page-alpine-laax-20140222>
+      <my-page-alpine-andermatt-20140112 name="/alpine/andermatt/20140112"></my-page-alpine-andermatt-20140112>
     </iron-pages>
   </template>
 
