--- a/src/pages/styles.html
+++ b/src/pages/styles.html
@@ -20,10 +20,15 @@
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
       }
 
-      .pictureCard {
+      .pictureCard, .videoCard {
         color: #fff;
         background-color: black;
         max-width: 1280px;
+      }
+
+      .videoCard {
+        display: block;
+        margin: 16px auto;
       }
 
       h1 {
@@ -49,6 +54,20 @@
         display: inline-block;
         margin: 0;
         max-width: 100%;
+      }
+
+      .videoWrapper {
+        position: relative;
+        padding-bottom: 56.25%; /* 16:9 */
+        padding-top: 25px;
+        height: 0;
+      }
+      .videoWrapper iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
       }
 
     </style>
