Add more articles

--- a/src/pages.html
+++ b/src/pages.html
@@ -68,6 +68,46 @@
       <my-page-alpine-pizol-20140228 name="/alpine/pizol/20140228"></my-page-alpine-pizol-20140228>
       <my-page-alpine-laax-20140222 name="/alpine/laax/20140222"></my-page-alpine-laax-20140222>
       <my-page-alpine-andermatt-20140112 name="/alpine/andermatt/20140112"></my-page-alpine-andermatt-20140112>
+      <my-page-alpine-sankt-moritz-20161207 name="/alpine/sankt-moritz/20161207"></my-page-alpine-sankt-moritz-20161207>
+      <my-page-alpine-ischgl-20131221 name="/alpine/ischgl/20131221"></my-page-alpine-ischgl-20131221>
+      <my-page-alpine-damuels-20131213 name="/alpine/damuels/20131213"></my-page-alpine-damuels-20131213>
+      <my-page-alpine-arlberg-20131217 name="/alpine/arlberg/20131217"></my-page-alpine-arlberg-20131217>
+      <my-page-alpine-montafon-20131216 name="/alpine/montafon/20131216"></my-page-alpine-montafon-20131216>
+      <my-page-alpine-lenzerheide-20131214 name="/alpine/lenzerheide/20131214"></my-page-alpine-lenzerheide-20131214>
+      <my-page-alpine-davos-20131116 name="/alpine/davos/20131116"></my-page-alpine-davos-20131116>
+      <my-page-alpine-arlberg-20131210 name="/alpine/arlberg/20131210"></my-page-alpine-arlberg-20131210>
+      <my-page-alpine-flumserberg-20131211 name="/alpine/flumserberg/20131211"></my-page-alpine-flumserberg-20131211>
+      <my-page-alpine-gargellen-20131208 name="/alpine/gargellen/20131208"></my-page-alpine-gargellen-20131208>
+      <my-page-alpine-ischgl-20131201 name="/alpine/ischgl/20131201"></my-page-alpine-ischgl-20131201>
+      <my-page-alpine-alpstein-20131013 name="/alpine/alpstein/20131013"></my-page-alpine-alpstein-20131013>
+      <my-page-alpine-damuels-20130824 name="/alpine/damuels/20130824"></my-page-alpine-damuels-20130824>
+      <my-page-alpine-laax-20120331 name="/alpine/laax/20120331"></my-page-alpine-laax-20120331>
+      <my-page-alpine-ischgl-20130428 name="/alpine/ischgl/20130428"></my-page-alpine-ischgl-20130428>
+      <my-page-alpine-arlberg-20130421 name="/alpine/arlberg/20130421"></my-page-alpine-arlberg-20130421>
+      <my-page-alpine-disentis-20130518 name="/alpine/disentis/20130518"></my-page-alpine-disentis-20130518>
+      <my-page-alpine-davos-20130414 name="/alpine/davos/20130414"></my-page-alpine-davos-20130414>
+      <my-page-alpine-davos-20130413 name="/alpine/davos/20130413"></my-page-alpine-davos-20130413>
+      <my-page-alpine-flumserberg-20130402 name="/alpine/flumserberg/20130402"></my-page-alpine-flumserberg-20130402>
+      <my-page-alpine-ischgl-20130410 name="/alpine/ischgl/20130410"></my-page-alpine-ischgl-20130410>
+      <my-page-alpine-arlberg-20130409 name="/alpine/arlberg/20130409"></my-page-alpine-arlberg-20130409>
+      <my-page-alpine-lenzerheide-20130406 name="/alpine/lenzerheide/20130406"></my-page-alpine-lenzerheide-20130406>
+      <my-page-alpine-montafon-20130404 name="/alpine/montafon/20130404"></my-page-alpine-montafon-20130404>
+      <my-page-alpine-pizol-20130401 name="/alpine/pizol/20130401"></my-page-alpine-pizol-20130401>
+      <my-page-alpine-obersaxen-20130223 name="/alpine/obersaxen/20130223"></my-page-alpine-obersaxen-20130223>
+      <my-page-alpine-arlberg-20121231 name="/alpine/arlberg/20121231"></my-page-alpine-arlberg-20121231>
+      <my-page-alpine-arlberg-20121224 name="/alpine/arlberg/20121224"></my-page-alpine-arlberg-20121224>
+      <my-page-alpine-davos-20130101 name="/alpine/davos/20130101"></my-page-alpine-davos-20130101>
+      <my-page-alpine-lenzerheide-20121229 name="/alpine/lenzerheide/20121229"></my-page-alpine-lenzerheide-20121229>
+      <my-page-alpine-montafon-20121219 name="/alpine/montafon/20121219"></my-page-alpine-montafon-20121219>
+      <my-page-alpine-arlberg-20121222 name="/alpine/arlberg/20121222"></my-page-alpine-arlberg-20121222>
+      <my-page-alpine-arlberg-20121220 name="/alpine/arlberg/20121220"></my-page-alpine-arlberg-20121220>
+      <my-page-alpine-lenzerheide-20121217 name="/alpine/lenzerheide/20121217"></my-page-alpine-lenzerheide-20121217>
+      <my-page-alpine-laterns-20121216 name="/alpine/laterns/20121216"></my-page-alpine-laterns-20121216>
+      <my-page-alpine-damuels-20121214 name="/alpine/damuels/20121214"></my-page-alpine-damuels-20121214>
+      <my-page-alpine-flumserberg-20121212 name="/alpine/flumserberg/20121212"></my-page-alpine-flumserberg-20121212>
+      <my-page-alpine-alpstein-20121211 name="/alpine/alpstein/20121211"></my-page-alpine-alpstein-20121211>
+      <my-page-alpine-davos-20121209 name="/alpine/davos/20121209"></my-page-alpine-davos-20121209>
+      <my-page-alpine-boedele-20121201 name="/alpine/boedele/20121201"></my-page-alpine-boedele-20121201>
     </iron-pages>
   </template>
 
