--- a/src/pages/styles.html
+++ b/src/pages/styles.html
@@ -51,8 +51,7 @@
       }
 
       .pictureCard img {
-        display: inline-block;
-        margin: 0;
+        margin: 0 auto -16px;
         max-width: 100%;
       }
 
