More articles and metatags

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
     <title>www.dplate.de</title>
-    <meta name="description" content="Webseite von Dirk Plate">
+    <meta id="description" name="description" content="Webseite von Dirk Plate">
 
     <link rel="icon" href="/images/icons/favicon.ico?v=2">
     <link rel="manifest" href="/manifest.json">
