--- a/src/pages.html
+++ b/src/pages.html
@@ -108,6 +108,16 @@
       <my-page-alpine-alpstein-20121211 name="/alpine/alpstein/20121211"></my-page-alpine-alpstein-20121211>
       <my-page-alpine-davos-20121209 name="/alpine/davos/20121209"></my-page-alpine-davos-20121209>
       <my-page-alpine-boedele-20121201 name="/alpine/boedele/20121201"></my-page-alpine-boedele-20121201>
+      <my-page-alpine-flumserberg-20121020 name="/alpine/flumserberg/20121020"></my-page-alpine-flumserberg-20121020>
+      <my-page-alpine-toggenburg-20120819 name="/alpine/toggenburg/20120819"></my-page-alpine-toggenburg-20120819>
+      <my-page-alpine-arlberg-20120421 name="/alpine/arlberg/20120421"></my-page-alpine-arlberg-20120421>
+      <my-page-alpine-arlberg-20120412 name="/alpine/arlberg/20120412"></my-page-alpine-arlberg-20120412>
+      <my-page-alpine-arlberg-20120410 name="/alpine/arlberg/20120410"></my-page-alpine-arlberg-20120410>
+      <my-page-alpine-lenzerheide-20120409 name="/alpine/lenzerheide/20120409"></my-page-alpine-lenzerheide-20120409>
+      <my-page-alpine-lenzerheide-20120406 name="/alpine/lenzerheide/20120406"></my-page-alpine-lenzerheide-20120406>
+      <my-page-alpine-davos-20120403 name="/alpine/davos/20120403"></my-page-alpine-davos-20120403>
+      <my-page-alpine-arlberg-20120402 name="/alpine/arlberg/20120402"></my-page-alpine-arlberg-20120402>
+      <my-page-alpine-pizol-20120324 name="/alpine/pizol/20120324"></my-page-alpine-pizol-20120324>
     </iron-pages>
   </template>
 
