--- a/src/pages/alpine/montafon/20130404.html
+++ b/src/pages/alpine/montafon/20130404.html
@@ -80,7 +80,7 @@ Gefahrene Strecke inkl. Busfahrt.
   <div class="videoWrapper">
     <iframe src='http://player.vimeo.com/video/63417856' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
   </div>
-Und noch ein Video vom Skitag... muss man ja mal ausnutzen, wenn die Kamera das kann. Hab aber weder Übung im Filmen, noch im Schneiden:<br />
+Und noch ein Video vom Skitag... muss man ja mal ausnutzen, wenn die Kamera das kann. Hab aber weder Übung im Filmen, noch im Schneiden.
 </div>
 <div class="card">
 Ganz guter Skitag, leider in Silvretta Nova recht voll (nervige Urlauber mit motzenden Müttern) und die Pisten für meinen Geschmack zu hart.
